// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basics > can be mixed with props() 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["main","extra"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({main: 7,extra: 'side'}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > can be mixed with props() 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/>/<block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].all.extra);
    const b3 = safeOutput(ctx['this'].main);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`basics > default value when prop is absent 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > default value when prop is absent 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].label);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > multiple prop fields in same component 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["a","b"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({a: 'x',b: 2}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > multiple prop fields in same component 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/>/<block-child-1/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].a);
    const b3 = safeOutput(ctx['this'].b);
    return block1([], [b2, b3]);
  }
}"
`;

exports[`basics > prop accepts instanceOf type 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["todo"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({todo: ctx['this'].myTodo}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > prop accepts instanceOf type 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].todo.name);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > provided value takes precedence over default 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["label"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({label: 'hello'}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > provided value takes precedence over default 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].label);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > reads the named prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: 42}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > reads the named prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].value);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > type argument is optional (accepts any value) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const props1 = {value: 'anything'};
    const b2 = comp1(props1, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > type argument is optional (accepts any value) 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].value);
    return block1([], [b2]);
  }
}"
`;

exports[`dev mode > default value skips validation when prop is absent 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].label);
    return block1([], [b2]);
  }
}"
`;

exports[`dev mode > does not throw if signal reference is stable across re-renders 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["todo"]);
  
  return function template(ctx, node, key = "") {
    const props1 = {todo: ctx['this'].todoSig};
    return comp1(props1, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`dev mode > does not throw if signal reference is stable across re-renders 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`dev mode > omitted prop with default does not trigger static-prop error on re-render 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const props1 = {};
    return comp1(props1, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`dev mode > omitted prop with default does not trigger static-prop error on re-render 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].label);
    return block1([], [b2]);
  }
}"
`;

exports[`dev mode > skips immutability check in non-dev mode 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["todo"]);
  
  return function template(ctx, node, key = "") {
    return comp1({todo: ctx['this'].state.todo}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`dev mode > skips immutability check in non-dev mode 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`dev mode > skips validation in non-dev mode 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`dev mode > throws if prop reference changes on re-render 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["todo"]);
  
  return function template(ctx, node, key = "") {
    const props1 = {todo: ctx['this'].state.todo};
    return comp1(props1, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`dev mode > throws if prop reference changes on re-render 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`dev mode > validates initial type on mount (child component) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  return function template(ctx, node, key = "") {
    const props1 = {value: 'not-a-number'};
    return comp1(props1, key + \`__1\`, node, this, null);
  }
}"
`;
